# Time-Bank

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md
Minh/Request/transformers-js/: .index_cache  .last_sync  merkle_tree
docs/: loginDetails.txt
enc_temp_folder/ccaf6569747e7e7fc5f76ffffc7314f/: welcomeInterface.cpp
src/: Width.h  loginDetails.txt  main.cpp  welcomeInterface.cpp
src/rating/: rating.cpp  rating.h
src/request/: Request.h  a.out  request.cpp  request.h  testGithub.txt
src/request/controller/: RequestController.cpp  RequestController.h
src/request/model/: RequestModel.cpp  RequestModel.h  UserRequest.h  fileUtility.cpp  fileUtility.h  userRequest.cpp  userRequest.h
src/request/view/: RequestView.cpp  RequestView.h
src/user/: User.cpp  User.h  user.cpp  user.h
src/user/Admin/: Admin.cpp  Admin.h
src/user/Guest/: Guest.cpp  Guest.h
src/user/Member/: Member.cpp  Member.h  tempCodeRunnerFile.cpp
src/user/Tools/: Tool.cpp  Tool.h
src/welcomeInterface/: welcomeInterface.cpp  welcomeInterface.h
